artpage mobile fix
artpopups bg too short

--- a/styleArtPage.css
+++ b/styleArtPage.css
@@ -160,7 +160,7 @@
 
     .ArtPopUp{
         width: 100%;
-        height: 100%;
+        height: 500lvh;
         top:0;
         left:0;
         position: fixed;
@@ -187,7 +187,7 @@
         width: 85vw;
         background:#FCF8DA;
         left:5vw;
-        height:100vh;
+        height: 500lvh;
     }
 
     .Title{
@@ -369,7 +369,7 @@
 
     .ArtPopUp{
         width: 100lvw;
-        height: 100lvh;
+        height: 500lvh;
         top:0;
         left:0;
         position: fixed;
@@ -396,7 +396,7 @@
         width: 85lvw;
         background:#FCF8DA;
         left:5lvw;
-        height:100lvh;
+        height:500lvh;
     }
 
     .Title{
